# MIDIScaleDetector

./: .gitignore  CMakeLists.txt  DELIVERY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  midi_filenames.txt  schema.sql  setup.sh  temp_license.php
.github/workflows/: build.yml
Documentation/: ARCHITECTURE.md  BUILD.md  USER_GUIDE.md
Resources/: MIDIXplorer.icns
Source/: Version.h
Source/Core/: CMakeLists.txt
Source/Core/Database/: Database.cpp  Database.h
Source/Core/FileScanner/: FileScanner.cpp  FileScanner.h
Source/Core/MIDIParser/: MIDIParser.cpp  MIDIParser.h
Source/Core/ScaleDetector/: ScaleDetector.cpp  ScaleDetector.h
Source/Plugin/: CMakeLists.txt  LicenseManager.h  MIDIScalePlugin.cpp  MIDIScalePlugin.h  PluginEditor.cpp  PluginEditor.h
Source/Standalone/: ActivationDialog.cpp  ActivationDialog.h  CMakeLists.txt  LicenseManager.cpp  LicenseManager.h  MIDIScaleDetectorApp.swift  MIDIXplorerApp.swift  PianoSynthesizer.h  StandaloneApp.cpp
Source/Standalone/MIDIScaleDetector.xcodeproj/: project.pbxproj
Source/Standalone/MIDIXplorer.xcodeproj/: project.pbxproj
Source/Standalone/UI/: ContentView.swift
Tests/: BasicTests.cpp  CMakeLists.txt
api/: license.php
build-release/: CTestTestfile.cmake  MIDIXplorer-1.0.1.dmg  MIDIXplorer-1.0.2.dmg  MIDIXplorer-1.0.4.dmg  MIDIXplorer-1.0.5.dmg  MIDIXplorer-1.0.6.dmg  MIDIXplorer-1.0.7.dmg
build-release/JUCE/: JUCEExportConfig.cmake
build-release/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
build-release/Source/Plugin/: MIDIXplorerPlugin_vst3_helper
build-release/Source/Plugin/MIDIXplorerPlugin_artefacts/JuceLibraryCode/: Info.txt
build-release/Source/Plugin/MIDIXplorerPlugin_artefacts/JuceLibraryCode/MIDIXplorerPlugin_AU/: Info.plist
build-release/Source/Plugin/MIDIXplorerPlugin_artefacts/JuceLibraryCode/MIDIXplorerPlugin_VST3/: Info.plist
build-release/Source/Plugin/MIDIXplorerPlugin_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/Source/Plugin/juce_binarydata_MIDIXplorerPluginAssets/JuceLibraryCode/: BinaryData1.cpp  input_file_list
build-release/Source/Standalone/MIDIXplorerStandalone_artefacts/JuceLibraryCode/: Info.txt
build-release/Source/Standalone/MIDIXplorerStandalone_artefacts/JuceLibraryCode/MIDIXplorerStandalone/: Info.plist
build-release/Source/Standalone/MIDIXplorerStandalone_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/Source/Standalone/MIDIXplorerStandalone_artefacts/Release/MIDI Xplorer.app/Contents/: Info.plist
build-release/Source/Standalone/juce_binarydata_MIDIXplorerAssets/JuceLibraryCode/: BinaryData.h  input_file_list
build-release/Tests/: CTestTestfile.cmake  MIDIXplorerTests
build-release/dmg/MIDI Xplorer 2.app/Contents/: Info.plist
build-release/dmg/MIDI Xplorer.app/Contents/: Info.plist
build-release/dmg/MIDI Xplorer.app/Contents/Resources/: Icon.icns
